--- a/src/main/resources/dk/sdu/tek/presentation/producermenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/producermenu.fxml
@@ -10,28 +10,37 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.RadioMenuItem?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.TextArea?>
 <AnchorPane fx:id="wrapper" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.sdu.tek.presentation.SecondaryController">
    <children>
-      <TabPane fx:id="mainTab" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="mainTab" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="954.0" style="-fx-background-color: #fff;" tabClosingPolicy="UNAVAILABLE">
          <tabs>
-            <Tab text="Produktioner">
+            <Tab text="Søg">
                <content>
                   <AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
                         <Label layoutX="33.0" layoutY="25.0" text="Søg efter indhold" />
-                        <TextField fx:id="searchField" layoutX="33.0" layoutY="43.0" prefHeight="25.0" prefWidth="219.0" />
-                        <Button disable="true" layoutX="260.0" layoutY="43.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
+                        <TextField fx:id="searchField" layoutX="33.0" layoutY="43.0" onKeyReleased="#setResultList" prefHeight="26.0" prefWidth="230.0" />
                         <ListView fx:id="resultList" layoutX="33.0" layoutY="79.0" onMouseClicked="#getSelectedItem" prefHeight="507.0" prefWidth="346.0" />
-                        <TextField fx:id="productionNameTextField" layoutX="477.0" layoutY="123.0" prefHeight="26.0" prefWidth="155.0" />
-                        <TextField fx:id="productionIDTextField" layoutX="663.0" layoutY="123.0" prefHeight="26.0" prefWidth="90.0" />
-                        <TextField fx:id="thisProducerTextField" layoutX="477.0" layoutY="197.0" prefHeight="26.0" prefWidth="155.0" />
-                        <Label layoutX="477.0" layoutY="105.0" text="Navn" />
-                        <Label layoutX="663.0" layoutY="105.0" text="ID" />
-                        <Label layoutX="477.0" layoutY="179.0" text="Producer" />
-                        <Label layoutX="663.0" layoutY="179.0" text="Producer ID" />
-                        <TextField fx:id="thisProducerIDTextField" layoutX="663.0" layoutY="197.0" prefHeight="26.0" prefWidth="90.0" />
-                        <Label layoutX="477.0" layoutY="253.0" text="Krediteringer" />
-                        <ListView fx:id="productionCreditList" layoutX="477.0" layoutY="271.0" prefHeight="315.0" prefWidth="288.0" />
+                        <Label fx:id="creditLabel" layoutX="477.0" layoutY="253.0" text="Krediteringer" />
+                        <ListView fx:id="creditList" layoutX="477.0" layoutY="271.0" prefHeight="315.0" prefWidth="288.0" />
+                        <Button fx:id="adminDeleteButton" layoutX="787.0" layoutY="198.0" mnemonicParsing="false" onAction="#adminDeleteCredit" text="Delete" />
+                        <MenuButton fx:id="selectItem" layoutX="270.0" layoutY="43.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="109.0" text="Vælg">
+                           <items>
+                              <RadioMenuItem fx:id="selectProducers" mnemonicParsing="false" onAction="#setResultList" text="Producenter">
+                                 <toggleGroup>
+                                    <ToggleGroup fx:id="selectToggle" />
+                                 </toggleGroup>
+                              </RadioMenuItem>
+                              <RadioMenuItem fx:id="selectProductions" mnemonicParsing="false" onAction="#setResultList" selected="true" text="Produktioner" toggleGroup="$selectToggle" />
+                              <RadioMenuItem fx:id="selectPeople" mnemonicParsing="false" onAction="#setResultList" text="Personer" toggleGroup="$selectToggle" />
+                              <RadioMenuItem fx:id="selectCredits" mnemonicParsing="false" onAction="#setResultList" text="Krediteringer" toggleGroup="$selectToggle" />
+                           </items>
+                        </MenuButton>
+                        <TextArea fx:id="infoArea" editable="false" layoutX="477.0" layoutY="79.0" prefHeight="164.0" prefWidth="288.0" />
                      </children>
                   </AnchorPane>
                </content>
@@ -40,20 +49,28 @@
                <content>
                   <AnchorPane fx:id="anchorpane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
-                        <Text layoutX="184.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret produktion" />
-                        <Text layoutX="404.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret person" />
-                        <Text layoutX="648.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret kreditering" />
-                        <TextField fx:id="createProductionName" layoutX="184.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
-                        <TextField fx:id="createPersonName" layoutX="404.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
-                        <TextField fx:id="createCreditID" layoutX="648.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Person ID" />
-                        <TextField fx:id="createProductionID" layoutX="184.0" layoutY="137.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
-                        <TextField fx:id="createPersonInfo" layoutX="404.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Kontakt info" />
-                        <TextField fx:id="createPersonID" layoutX="404.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="ID" />
-                        <TextField fx:id="createCreditRole" layoutX="648.0" layoutY="137.0" prefHeight="25.0" prefWidth="145.0" promptText="Rolle" />
-                        <TextField fx:id="createCreditProductionID" layoutX="648.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
-                        <Button fx:id="createCreditButton" layoutX="646.0" layoutY="237.0" mnemonicParsing="false" onAction="#producerCreateCredit" prefHeight="25.0" prefWidth="95.0" text="Opret" />
-                        <Button fx:id="createPersonButton" layoutX="404.0" layoutY="237.0" mnemonicParsing="false" onAction="#createPerson" prefHeight="25.0" prefWidth="95.0" text="Opret" />
-                        <Button fx:id="adminCreateProductionButton" layoutX="182.0" layoutY="237.0" mnemonicParsing="false" onAction="#producerCreateProduction" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                        <TextField fx:id="createProducerUsername" layoutX="73.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Brugernavn" />
+                        <Text layoutX="73.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret producer" wrappingWidth="117.13671875" />
+                        <TextField fx:id="createProducerPassword" layoutX="73.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Password" />
+                        <Text layoutX="293.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret produktion" />
+                        <Text layoutX="525.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret person" />
+                        <Text layoutX="756.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret kreditering" />
+                        <TextField fx:id="createProductionName" layoutX="293.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
+                        <TextField fx:id="createPersonName" layoutX="525.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
+                        <TextField fx:id="createCreditId" layoutX="756.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Kreditering ID" />
+                        <TextField fx:id="createProducerId" layoutX="73.0" layoutY="173.0" prefHeight="25.0" prefWidth="144.0" promptText="unikt ID" />
+                        <Button fx:id="createProducerButton" layoutX="73.0" layoutY="250.0" mnemonicParsing="false" onAction="#createProducer" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                        <TextField fx:id="createProductionId" layoutX="293.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
+                        <TextField fx:id="createProductionProdId" layoutX="293.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="Producer ID" />
+                        <TextField fx:id="createPersonInfo" layoutX="525.0" layoutY="137.0" prefHeight="25.0" prefWidth="145.0" promptText="Kontakt info" />
+                        <TextField fx:id="createPersonId" layoutX="525.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="ID" />
+                        <TextField fx:id="createCreditPersonId" layoutX="756.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Person ID" />
+                        <TextField fx:id="createCreditProductionId" layoutX="756.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
+                        <Button fx:id="createCreditButton" layoutX="754.0" layoutY="250.0" mnemonicParsing="false" onAction="#createCredit" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                        <Button fx:id="createPersonButton" layoutX="525.0" layoutY="250.0" mnemonicParsing="false" onAction="#createPerson" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                        <Button fx:id="adminCreateProductionButton" layoutX="291.0" layoutY="250.0" mnemonicParsing="false" onAction="#createProduction" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                        <TextField fx:id="createCreditRole" layoutX="756.0" layoutY="208.0" prefHeight="25.0" prefWidth="145.0" promptText="Rolle" />
+                        <Label fx:id="successLabel" layoutX="73.0" layoutY="333.0" prefHeight="18.0" prefWidth="569.0" />
                      </children>
                   </AnchorPane>
                </content>
