--- a/src/main/resources/dk/sdu/tek/presentation/producermenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/producermenu.fxml
@@ -47,18 +47,17 @@
                <content>
                   <AnchorPane fx:id="anchorpane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
-                        <Text layoutX="181.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret produktion" />
+                        <Text layoutX="165.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret produktion" />
                         <Text layoutX="404.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret person" />
                         <Text layoutX="643.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret kreditering" />
-                        <TextField fx:id="createProductionName" layoutX="181.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
+                        <TextField fx:id="createProductionName" layoutX="165.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
                         <TextField fx:id="createPersonName" layoutX="404.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
-                        <TextField fx:id="createProductionProdId" layoutX="181.0" layoutY="137.0" prefHeight="25.0" prefWidth="145.0" promptText="Producer ID" />
                         <TextField fx:id="createPersonInfo" layoutX="404.0" layoutY="137.0" prefHeight="25.0" prefWidth="145.0" promptText="Kontakt info" />
                         <TextField fx:id="createCreditPersonId" layoutX="643.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Person ID" />
                         <TextField fx:id="createCreditProductionId" layoutX="643.0" layoutY="137.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
                         <Button fx:id="createCreditButton" layoutX="643.0" layoutY="236.0" mnemonicParsing="false" onAction="#createCredit" prefHeight="25.0" prefWidth="145.0" text="Opret" />
                         <Button fx:id="createPersonButton" layoutX="404.0" layoutY="236.0" mnemonicParsing="false" onAction="#createPerson" prefHeight="25.0" prefWidth="145.0" text="Opret" />
-                        <Button fx:id="adminCreateProductionButton" layoutX="181.0" layoutY="236.0" mnemonicParsing="false" onAction="#createProduction" prefHeight="25.0" prefWidth="145.0" text="Opret" />
+                        <Button fx:id="adminCreateProductionButton" layoutX="165.0" layoutY="236.0" mnemonicParsing="false" onAction="#createProduction" prefHeight="25.0" prefWidth="145.0" text="Opret" />
                         <TextField fx:id="createCreditRole" layoutX="643.0" layoutY="171.0" prefHeight="25.0" prefWidth="145.0" promptText="Rolle" />
                         <Label fx:id="successLabel" layoutX="73.0" layoutY="333.0" prefHeight="18.0" prefWidth="569.0" />
                      </children>
@@ -82,7 +81,7 @@
                         <TextField fx:id="editCreditProdId" layoutX="477.0" layoutY="273.0" onKeyReleased="#getSelectedCreditProdName" prefHeight="26.0" prefWidth="81.0" />
                         <Label layoutX="477.0" layoutY="256.0" text="Produktions ID" />
                         <Label layoutX="569.0" layoutY="179.0" text="Navn" />
-                        <Label layoutX="569.0" layoutY="256.0" text="Navn på prduktionen" />
+                        <Label layoutX="569.0" layoutY="256.0" text="Navn på produktionen" />
                         <Button fx:id="deleteCredit" layoutX="477.0" layoutY="333.0" mnemonicParsing="false" onAction="#deleteCredit" prefWidth="81.0" text="Slet" />
                         <Button fx:id="editCredit" layoutX="570.0" layoutY="333.0" mnemonicParsing="false" onAction="#editCredit" prefWidth="81.0" text="Rediger" />
                         <Label fx:id="editLabel" layoutX="477.0" layoutY="373.0" />
